# forwarding_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  excel_parser.py  image_renderer.py  pyproject.toml  route_store.py  yandex_geocoder.py
