[project]
name = "forwarding-bot"
version = "0.1.0"
description = "Telegram bot that turns routing Excel files into order cards."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow==10.4.0",
    "python-dotenv>=1.0,<2",
    "python-telegram-bot==21.6",
]

[tool.uv]
package = false
